# obsitean

./: .gitignore  Cargo.toml
.github/: copilot-instructions.md
css/: wiki-style.css
src/: gen.rs  main.rs  obsidian.rs  server.rs  site.rs  templates.rs
static/css/: style.css
templates/: base.jinja2  page.html  page.jinja2  site-nav.jinja2
templates/wiki/: base.jinja2  header.jinja2  navigation.jinja2  page.jinja2
